// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Flexbox > gap 1`] = `
<div>
  <div
    class="layoutkit-flexbox rlk-flex rlk-flex-col"
    data-testid="container"
    style="--rlk-gap: 2px;"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`Flexbox > paddingBlock 1`] = `
<div>
  <div
    class="layoutkit-flexbox rlk-flex rlk-flex-row"
    style="--rlk-padding-block: 24px;"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`Flexbox > paddingInline 1`] = `
<div>
  <div
    class="layoutkit-flexbox rlk-flex rlk-flex-row"
    style="--rlk-padding-inline: 24px;"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`Flexbox > 不可见 1`] = `
<div>
  <div
    class="layoutkit-flexbox rlk-flex rlk-hidden rlk-flex-col"
    data-testid="container"
    style="--rlk-gap: 2px;"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`Flexbox > 其余方向 1`] = `
<div>
  <div
    class="layoutkit-flexbox rlk-flex rlk-flex-row"
    data-testid="container"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`Flexbox > 外部挂载 className 1`] = `
<div>
  <div
    class="layoutkit-flexbox rlk-flex rlk-flex-col outer"
  />
</div>
`;

exports[`Flexbox > 支持 as 属性 1`] = `
<h3
  class="layoutkit-flexbox rlk-flex rlk-flex-col"
>
  h3
</h3>
`;

exports[`Flexbox > 横向 1`] = `
<div>
  <div
    class="layoutkit-flexbox rlk-flex rlk-flex-row"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`Flexbox > 横向撑开 1`] = `
<div>
  <div
    class="layoutkit-flexbox rlk-flex rlk-flex-row rlk-justify-between"
    data-testid="container"
    style="width: 100%;"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`Flexbox > 默认 1`] = `
<div>
  <div
    class="layoutkit-flexbox rlk-flex rlk-flex-col"
    data-testid="container"
  />
</div>
`;
